--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <script>
     tailwind.config = {
       darkMode: 'class', // or 'media'
+      theme: {
+        extend: {
+          colors: {
+            'palette-bg': '#f7f9ff',
+            'palette-panel': '#e9efff',
+            'palette-accent': '#6086d1',
+            'palette-accent-hover': '#4a6aaa',
+            'palette-text': '#1e3a5f',
+            'palette-text-secondary': '#49648a',
+            'palette-border': '#dbe4ff',
+          }
+        }
+      }
     }
   </script>
   <script type="importmap">
@@ -22,7 +35,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 dark:bg-gray-900">
+  <body class="bg-palette-bg dark:bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
